Fixed horizontal scroll bar on report page table

--- a/web/src/css/report_style.css
+++ b/web/src/css/report_style.css
@@ -34,8 +34,7 @@
 }
 
 #table-box div{
-
-	width:inherit;
+	width: 100%;
 }
 #table-box{
 	display: flex;
